# opit

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude/skills/check/: SKILL.md
.claude/skills/check/scripts/: check.sh
.claude/skills/codex-task/: SKILL.md
.claude/skills/codex-task/scripts/: codex-task.sh
.claude/skills/release/: SKILL.md
.claude/skills/verify-tui/: SKILL.md
.claude/skills/verify-tui/scripts/: tui-drive.sh
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  GETTING_STARTED.md  GLOSSARY.md  TESTING.md
examples/: minimal.yaml
src/: cli.rs  lib.rs  main.rs
src/app/: mod.rs  pane_editor.rs
src/auth/: mod.rs  oauth2.rs
src/request/: http_client.rs  mod.rs
src/spec/: mod.rs  operation.rs  security.rs
src/ui/: auth_config.rs  endpoint_list.rs  mod.rs  request_builder.rs  response_viewer.rs
tests/: app_endpoint_selection.rs  app_focus.rs  app_pane_editing.rs  app_request_builder_custom_params.rs  app_response_state.rs  auth_credential_interpretation.rs  auth_credentials.rs  cli_args.rs  http_client.rs  oauth2_client_credentials.rs  oauth2_resolve_credentials.rs  oauth2_token_caches.rs  pane_editor.rs  request_body_formatting.rs  request_body_interpretation.rs  request_build_preview.rs  request_building.rs  request_header_helpers.rs  request_param_interpretation.rs  request_required_params.rs  request_to_curl.rs  spec_base_url.rs  spec_load_from_path.rs  spec_operation_parameters.rs  spec_operation_request_body.rs  spec_operations_all_methods.rs  spec_parsing.rs  spec_security_schemes.rs  spec_yaml_loading.rs  split_credential_pair.rs  ui_auth_config.rs  ui_endpoint_list.rs  ui_endpoint_list_filter.rs  ui_request_builder.rs  ui_response_viewer.rs
