[package]
name = "openapi_terminal_app"
version = "0.1.0"
edition = "2021"

[lib]
name = "openapi_terminal_app"
path = "src/lib.rs"

[[bin]]
name = "openapi-terminal-app"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
openapiv3 = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
