[package]
name = "openapi_terminal_app"
version = "0.1.0"
edition = "2021"

[lib]
name = "openapi_terminal_app"
path = "src/lib.rs"

[[bin]]
name = "openapi-terminal-app"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
openapiv3 = "2.1"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
