[package]
name = "opit"
version = "0.2.1"
edition = "2021"

[lib]
name = "openapi_terminal_app"
path = "src/lib.rs"

[[bin]]
name = "opit"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
openapiv3 = "2.1"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
